manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discordsoundboard-deployment-frontend
  labels:
    app: discordsoundboard
    tier: frontend
spec:
  selector:
    matchLabels:
      app: discordsoundboard
      tier: frontend
  template:
    metadata:
      labels:
        app: discordsoundboard
        tier: frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: discordsoundboard
          image: ghcr.io/ggresillion/discordsoundboard_frontend:$IMAGE_TAG
          ports:
            - containerPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: discordsoundboard-deployment-backend
  labels:
    app: discordsoundboard
    tier: backend
spec:
  selector:
    matchLabels:
      app: discordsoundboard
      tier: backend
  template:
    metadata:
      labels:
        app: discordsoundboard
        tier: backend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: discordsoundboard
          image: ghcr.io/ggresillion/discordsoundboard_backend:${IMAGE_TAG}
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: discordsoundboard-service
spec:
  selector:
    app: discordsoundboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discordsoundboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discordsoundboard-service
                port:
                  number: 80
